<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfoManagement</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_main_title">个人信息管理小助手</string>
    <string name="string_main_buttom">欢迎使用个人信息管理小助手！</string>
    <string name="string_main_payrec">记录消费</string>
    <string name="string_main_querymanage">查询消费</string>
    <string name="string_main_billmanage">账本管理</string>
    <string name="string_main_totalmanage">统计管理</string>
    <string name="string_main_peoplemanage">人员管理</string>
    <string name="string_main_categorymana">类别管理</string>
    
    
    <string name="string_user_title">%s人员</string>
    <string name="string_user_add">新增</string>
    <string name="string_user_edit">修改</string>
        <!-- Menu -->
    
    <string name="string_useradd_hint">人员名称</string>

    <string-array name="array_main_buttom_list">
        <item name="first">第一个</item>
        <item name="second">第二个</item>
        <item name="third">第三个</item>
        <item name="forth">第四个</item>
    </string-array>
    <string-array name="array_initarray">
        <item name="first">张三</item>
        <item name="second">李四</item>
        <item name="third">赵五</item>
        <item name="forth">田七</item>
    </string-array>
    <string-array name="array_user_buttom">
        <item name="adduser">新建人员</item>
    </string-array>
    <string-array name="array_className">
        <item name="SQLiteDALUser">SQLiteDALUser</item>
        <item name="SQLiteDALAccount">SQLiteDALAccount</item>
         <item>SQLiteDALCategory</item>
        <item>SQLiteDALPayout</item>
        <item>SQLiteDALCreateView</item>
    </string-array>
    


    <string name="WelcomeInfo">欢迎您使用AA费用小助手!</string>
    <string name="PayoutTypeFlag">消费</string>
    <string name="appGridTextPayoutAdd">记录消费</string>
    <string name="appGridTextPayoutManage">查询消费</string>
    <string name="appGridTextAccountBookManage">账本管理</string>
    <string name="appGridTextStatisticsManage">统计管理</string>
    <string name="appGridTextCategoryManage">类别管理</string>
    <string name="appGridTextUserManage">人员管理</string>
    <string name="etUserNameHint">人员名称</string>
    <string name="TitleAdd">新建</string>
    <string name="TitleEdit">修改</string>
    <!-- ButtonText -->
    <string name="ButtonTextSelectAccountBook">选择账本</string>
    <string name="ButtonTextEnterAmount">输入金额</string>
    <string name="ButtonTextSelectPayoutDate">选择日期</string>
    <string name="ButtonTextSelectPayoutType">计算方式</string>
    <string name="ButtonTextSelectUser">选择消费人</string>
    <string name="ButtonTextSelectCategory">选择类别</string>
    <string name="ButtonTextDatabaseBackup">数据备份</string>
    <string name="ButtonTextDatabaseRestore">数据还原</string>
    <string name="ButtonTextSave">保存</string>
    <string name="ButtonTextCancel">取消</string>
    <string name="ButtonTextYes">是</string>
    <string name="ButtonTextNo">否</string>
    <string name="ButtonTextBack">返回</string>
    <string name="ButtonTextDot">.</string>
    <string name="ButtonTextOne">1</string>
    <string name="ButtonTextTwo">2</string>
    <string name="ButtonTextThree">3</string>
    <string name="ButtonTextFour">4</string>
    <string name="ButtonTextFive">5</string>
    <string name="ButtonTextSix">6</string>
    <string name="ButtonTextSeven">7</string>
    <string name="ButtonTextEight">8</string>
    <string name="ButtonTextNine">9</string>
    <string name="ButtonTextZero">0</string>
    <string name="ButtonTextChange">更正</string>
    <string name="ButtonTextOk">确定</string>
    <!-- TextViewText -->
    <string name="TextViewTextCategoryName">类别名称</string>
    <string name="TextViewTextParentID">所属分类</string>
    <string name="TextViewTextChildrenCategory">%s子类</string>
    <string name="TextViewTextPayoutTotal">共%1$s笔，合计消费%2$s</string>
    <string name="TextViewTextAccountBookPayoutTotal">共%s笔 </string>
    <string name="TextViewTextAccountBookPayoutMoney">合计消费%s元</string>
    <string name="TextViewTextPayoutNoData">没有查询到消费记录</string>
    <string name="TipsAddSucceed">保存成功</string>
    <string name="TipsAddFail">保存失败</string>
    <string name="TipsDeleteFail">删除失败</string>
    <!-- Menu -->
    <string name="MenuTextEdit">修改</string>
    <string name="MenuTextDelete">删除</string>
    <!-- Dailog -->
    <string name="DialogTitleDelete">删除提示</string>
    <string name="DialogTitleAccountBook">%s账本</string>
    <string name="DialogMessageAccountBookDelete">账本删除后相关消费记录也会同时删除,你确定要删除%s吗?</string>
    <string name="DialogTitleUser">%s人员</string>
    <string name="DialogMessageUserDelete">你确定要删除%s用户吗?</string>
    <string name="DialogMessagePayoutDelete">你确定要删除%s消费记录吗?</string>
    <string name="DialogMessageCategoryDelete">你确定要删除%s类别吗?</string>
    <string name="DialogTitleDatabaseBackup">数据备份</string>
    <string name="DialogMessageDatabaseBackupSucceed">数据备份成功</string>
    <string name="DialogMessageDatabaseBackupFail">数据备份失败</string>
    <string name="DialogMessageDatabaseRestoreSucceed">数据还原成功</string>
    <string name="DialogMessageDatabaseRestoreFail">数据还原失败</string>
    <!-- Hint -->
    <string name="HintAccountBookName">账本名称</string>
    <string name="HintUserName">人员名称</string>
    <string name="HintEnterAmount">请输入金额</string>
    <string name="HintEnterComment">请输入消费心得或备注</string>
    <string name="HintEnterCategory">请输入或选择消费类别</string>
    <string name="HintSelectUser">请选择消费人，第一位为付款人</string>
    <!-- CheckBoxText -->
    <string name="CheckBoxTextIsDefault">设置为默认账本</string>
    <!-- ActivityTitle -->
    <string name="ActivityTitleMain">AA费用小助手</string>
    <string name="ActivityTitleAccountBook">账本管理(%s)</string>
    <string name="ActivityTitleCategory">类别管理(%s)</string>
    <string name="ActivityTitleCategoryAddOrEdit">%s类别</string>
    <string name="ActivityTitleUser">人员管理(%s)</string>
    <string name="ActivityTitlePayoutAddOrEdit">%s消费</string>
    <string name="ActivityTitlePayout">查询消费-%1$s(%2$s)</string>
    <string name="ActivityTitleStatistics">统计管理-%1$s</string>
    <string name="ActivityCategoryTotal">统计类别</string>

    <!-- CheckDataText -->
    <string name="CheckDataTextChineseEnglishNum">%s必须是英文、中文与数字</string>
    <string name="CheckDataTextMoney">金额必须是数字，并且不能超过小数点后两位数</string>
    <string name="CheckDataTextCategoryIsNull">请选择一个消费类别</string>
    <string name="CheckDataTextPayoutUser">均分或借贷请至少选择两个消费人</string>
    <string name="CheckDataTextPayoutUser2">个人消费请至少选择一个消费人</string>
    <string name="CheckDataTextPayoutUserIsNull">请选择消费人</string>
    <string name="CheckDataTextAccountBookExist">该账本已经存在，请换个账本名称</string>
    <string name="CheckDataTextUserExist">该用户已经存在，请换个用户名称</string>
    <string name="StatisticsProgressDialogTitle">统计</string>
    <string name="StatisticsProgressDialogWaiting">正在统计中，请稍候...</string>


</resources>