<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/TableLayoutButtonBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1" >

        <TableRow>

            <Button
                android:id="@+id/btSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonTextSave" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonTextCancel" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/ScrollViewMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/TableLayoutButtonBox" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/box"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectAccountBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/small1" />

                <Button
                    android:id="@+id/btSelectAccountBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextSelectAccountBook" />

                <EditText
                    android:id="@+id/etAccountBookName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectAccountBook"
                    android:layout_toRightOf="@id/imgSelectAccountBook"
                    android:focusable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/small2" />

                <Button
                    android:id="@+id/btSelectAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextEnterAmount" />

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectAmount"
                    android:layout_toRightOf="@id/imgSelectAmount"
                    android:hint="@string/HintEnterAmount"
                    android:maxLength="5"
                    android:numeric="decimal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/small3" />

                <Button
                    android:id="@+id/btSelectCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextSelectCategory" />

                <AutoCompleteTextView
                    android:id="@+id/actvCategoryName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectCategory"
                    android:layout_toRightOf="@id/imgSelectCategory"
                    android:completionThreshold="1"
                    android:dropDownWidth="fill_parent"
                    android:hint="@string/HintEnterCategory"
                    android:singleLine="true"
                    android:textColor="#ff000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/small4" />

                <Button
                    android:id="@+id/btSelectPayoutDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextSelectPayoutDate" />

                <EditText
                    android:id="@+id/etPayoutDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectPayoutDate"
                    android:layout_toRightOf="@id/imgSelectDate"
                    android:focusable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/small5" />

                <Button
                    android:id="@+id/btSelectPayoutType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextSelectPayoutType" />

                <EditText
                    android:id="@+id/etPayoutType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectPayoutType"
                    android:layout_toRightOf="@id/imgSelectType"
                    android:focusable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imgSelectConsumer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/small6" />

                <Button
                    android:id="@+id/btSelectUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ButtonTextSelectUser" />

                <EditText
                    android:id="@+id/etPayoutUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btSelectUser"
                    android:layout_toRightOf="@id/imgSelectConsumer"
                    android:focusable="false"
                    android:hint="@string/HintSelectUser"
                    android:singleLine="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <EditText
                    android:id="@+id/etComment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="fill_horizontal"
                    android:hint="@string/HintEnterComment"
                    android:lines="7"
                    android:maxLength="301" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>